@@ -13,8 +13,6 @@
 
 * Strip the binaries (simple find running over the whole pkgs tree). !!
 
-* Make make dist work. !!
-
 * Finish modularization of installer.  NSIS' macro language is not up
    to the task, so we need a bit of configure/make magic as well (a la
    autoheader). !!!
